--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\08you\\\\Desktop\\\\4 Hours Project\\\\Kidney-Disease-Classification-MLflow-DVC\\\\research'"
+       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,12 @@
     "@dataclass(frozen=True)\n",
     "class TrainingConfig:\n",
     "    root_dir: Path\n",
+    "    Cover_train: Path\n",
+    "    Med_train: Path\n",
+    "    Cover_val:Path\n",
+    "    Med_val:Path\n",
     "    trained_model_path: Path\n",
     "    updated_base_model_path: Path\n",
-    "    training_data: Path\n",
     "    params_epochs: int\n",
     "    params_batch_size: int\n",
     "    params_is_augmentation: bool\n",
@@ -62,12 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cnnClassifier.constants import *\n",
     "from cnnClassifier.utils.common import read_yaml, create_directories\n",
+    "import numpy as np\n",
     "import tensorflow as tf"
    ]
   },
@@ -84,14 +88,17 @@
     "            params_filepath = PARAMS_FILE_PATH\n",
     "    ):\n",
     "        self.config = read_yaml(config_filepath)\n",
-    "        self.params = read_yaml(PARAMS_FILE_PATH)\n",
+    "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "    def get_training_config(self) -> TrainingConfig:\n",
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
-    "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"kidney-ct-scan-image\")\n",
+    "        Med_train = training.Med_train\n",
+    "        Cover_train= training.Cover_train\n",
+    "        Med_val=training.Med_val\n",
+    "        Cover_val=training.Cover_val\n",
     "        create_directories([\n",
     "            Path(training.root_dir)\n",
     "        ])\n",
@@ -100,7 +107,10 @@
     "            root_dir=Path(training.root_dir),\n",
     "            trained_model_path=Path(training.trained_model_path),\n",
     "            updated_base_model_path=Path(prepare_base_model.updated_base_model_path),\n",
-    "            training_data=Path(training_data),\n",
+    "            Med_train=Path(Med_train),\n",
+    "            Cover_train= Path(Cover_train),\n",
+    "            Med_val= Path(Med_val),\n",
+    "            Cover_val= Path(Cover_val),\n",
     "            params_epochs=params.EPOCHS,\n",
     "            params_batch_size=params.BATCH_SIZE,\n",
     "            params_is_augmentation=params.AUGMENTATION,\n",
@@ -120,6 +130,7 @@
     "import urllib.request as request\n",
     "from zipfile import ZipFile\n",
     "import tensorflow as tf\n",
+    "import cv2\n",
     "import time"
    ]
   },
@@ -136,30 +147,56 @@
     "        self.model = tf.keras.models.load_model(\n",
     "            self.config.updated_base_model_path\n",
     "        )\n",
+    "    \n",
+    "    # Function to convert grayscale image to RGB\n",
+    "    @staticmethod\n",
+    "    def gray_to_rgb(image):\n",
+    "        return cv2.cvtColor(image, cv2.COLOR_GRAY2RGB)\n",
+    "    # Preprocessing functions\n",
+    "    @staticmethod\n",
+    "    def normalize_batch(imgs):\n",
+    "        '''Performs channel-wise z-score normalization'''\n",
+    "\n",
+    "        return (imgs -  np.array([0.485, 0.456, 0.406])) /np.array([0.229, 0.224, 0.225])\n",
+    "    @staticmethod\n",
+    "    def denormalize_batch(imgs,should_clip=True):\n",
+    "        '''Denormalize the images for prediction'''\n",
+    "\n",
+    "        imgs= (imgs * np.array([0.229, 0.224, 0.225])) + np.array([0.485, 0.456, 0.406])\n",
+    "\n",
+    "        if should_clip:\n",
+    "            imgs= np.clip(imgs,0,1)\n",
+    "        return imgs\n",
+    "\n",
+    "    # Custom generator for loading training images from directory\n",
+    "    def generate_generator_multiple(self,generator, med_path, cover_path):\n",
+    "        genX1 = generator.flow_from_directory(med_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
+    "        genX2 = generator.flow_from_directory(cover_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
+    "\n",
+    "        while True:\n",
+    "            X1i = self.normalize_batch(genX1.next())\n",
+    "            X2i = self.normalize_batch(genX2.next())\n",
+    "\n",
+    "            # Check if the images are grayscale, and convert to RGB if necessary\n",
+    "            if X1i.shape[-1] != 3:\n",
+    "                X1i = self.gray_to_rgb(X1i)\n",
+    "            if X2i.shape[-1] != 3:\n",
+    "                X2i = self.gray_to_rgb(X2i)\n",
+    "\n",
+    "            yield ({'secret': X1i, 'cover': X2i}, {'hide_conv_f': X2i, 'revl_conv_f': X1i})\n",
+    "\n",
     "    def train_valid_generator(self):\n",
     "\n",
     "        datagenerator_kwargs = dict(\n",
-    "            rescale = 1./255,\n",
-    "            validation_split=0.20\n",
-    "        )\n",
-    "\n",
-    "        dataflow_kwargs = dict(\n",
-    "            target_size=self.config.params_image_size[:-1],\n",
-    "            batch_size=self.config.params_batch_size,\n",
-    "            interpolation=\"bilinear\"\n",
+    "            rescale = 1./255\n",
     "        )\n",
     "\n",
     "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
     "            **datagenerator_kwargs\n",
     "        )\n",
     "\n",
-    "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
-    "            directory=self.config.training_data,\n",
-    "            subset=\"validation\",\n",
-    "            shuffle=False,\n",
-    "            **dataflow_kwargs\n",
-    "        )\n",
-    "\n",
+    "        self.self.generate_generator_multiple(generator=valid_datagenerator, med_path=self.config.Med_val,cover_path=self.config.Cover_val)\n",
+    "        #needs to be two just like stego requirement\n",
     "        if self.config.params_is_augmentation:\n",
     "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
     "                rotation_range=40,\n",
@@ -173,12 +210,7 @@
     "        else:\n",
     "            train_datagenerator = valid_datagenerator\n",
     "\n",
-    "        self.train_generator = train_datagenerator.flow_from_directory(\n",
-    "            directory=self.config.training_data,\n",
-    "            subset=\"training\",\n",
-    "            shuffle=True,\n",
-    "            **dataflow_kwargs\n",
-    "        )\n",
+    "        self.train_generator = self.generate_generator_multiple(generator=train_datagenerator, med_path=self.config.Med_train,cover_path=self.config.Cover_train)\n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
