added prepare pipeline

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\08you\\\\Desktop\\\\4 Hours Project\\\\Kidney-Disease-Classification-MLflow-DVC\\\\research'"
+       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\08you\\Desktop\\4 Hours Project\\Kidney-Disease-Classification-MLflow-DVC\n"
+      "c:\\Users\\08you\\Desktop\\My own 3 hour project\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,18 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-02 14:40:54,075: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-02-02 14:40:54,081: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-02-02 14:40:54,083: INFO: common: created directory at: artifacts]\n",
-      "[2024-02-02 14:40:54,085: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-02-02 14:40:54,087: INFO: 986331348: Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2024-02-09 16:41:25,109: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-02-09 16:41:25,115: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-02-09 16:41:25,118: INFO: common: created directory at: artifacts]\n",
+      "[2024-02-09 16:41:25,120: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-02-09 16:41:25,122: INFO: 986331348: Downloading data from https://drive.google.com/file/d/1wX1NGvUfyl8k-_Bh5xF4NBvdv5H53Qaq/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -184,17 +184,17 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
-      "From (redirected): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=7037c020-93c6-465b-ab12-78a180dfe3ed\n",
-      "To: c:\\Users\\08you\\Desktop\\4 Hours Project\\Kidney-Disease-Classification-MLflow-DVC\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 57.7M/57.7M [02:36<00:00, 368kB/s]"
+      "From (original): https://drive.google.com/uc?/export=download&id=1wX1NGvUfyl8k-_Bh5xF4NBvdv5H53Qaq\n",
+      "From (redirected): https://drive.google.com/uc?/export=download&id=1wX1NGvUfyl8k-_Bh5xF4NBvdv5H53Qaq&confirm=t&uuid=8f773d07-6880-476a-b369-287e30cd0e29\n",
+      "To: c:\\Users\\08you\\Desktop\\My own 3 hour project\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 36.5M/36.5M [03:21<00:00, 181kB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-02 14:43:33,255: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2024-02-09 16:44:49,046: INFO: 986331348: Downloaded data from https://drive.google.com/file/d/1wX1NGvUfyl8k-_Bh5xF4NBvdv5H53Qaq/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
