--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\\\\research'"
+       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "    Cover_val:Path\n",
     "    Med_val:Path\n",
     "    trained_model_path: Path\n",
-    "    updated_base_model_path: Path\n",
+    "    base_model_path: Path\n",
     "    params_epochs: int\n",
     "    params_batch_size: int\n",
     "    params_is_augmentation: bool\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "        training_config = TrainingConfig(\n",
     "            root_dir=Path(training.root_dir),\n",
     "            trained_model_path=Path(training.trained_model_path),\n",
-    "            updated_base_model_path=Path(prepare_base_model.updated_base_model_path),\n",
+    "            base_model_path=Path(prepare_base_model.base_model_path),\n",
     "            Med_train=Path(Med_train),\n",
     "            Cover_train= Path(Cover_train),\n",
     "            Med_val= Path(Med_val),\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,22 +130,26 @@
     "import urllib.request as request\n",
     "from zipfile import ZipFile\n",
     "import tensorflow as tf\n",
+    "from src.cnnClassifier.utils.common import custom_loss_1,custom_loss_2\n",
     "import cv2\n",
-    "import time"
+    "import time\n",
+    "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Training:\n",
     "    def __init__(self, config: TrainingConfig):\n",
     "        self.config = config\n",
+    "        self.TRAIN_NUM=len(glob.glob(str(config.Med_train)+\"/*/*\"))\n",
+    "        self.VAL_NUM=len(glob.glob(str(config.Med_val)+\"/*/*\"))\n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.models.load_model(\n",
-    "            self.config.updated_base_model_path\n",
+    "            self.config.base_model_path,custom_objects={'custom_loss_2': custom_loss_2,'custom_loss_1': custom_loss_1}\n",
     "        )\n",
     "    \n",
     "    # Function to convert grayscale image to RGB\n",
@@ -195,7 +199,7 @@
     "            **datagenerator_kwargs\n",
     "        )\n",
     "\n",
-    "        self.self.generate_generator_multiple(generator=valid_datagenerator, med_path=self.config.Med_val,cover_path=self.config.Cover_val)\n",
+    "        self.generate_generator_multiple(generator=valid_datagenerator, med_path=self.config.Med_val,cover_path=self.config.Cover_val)\n",
     "        #needs to be two just like stego requirement\n",
     "        if self.config.params_is_augmentation:\n",
     "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
@@ -211,20 +215,21 @@
     "            train_datagenerator = valid_datagenerator\n",
     "\n",
     "        self.train_generator = self.generate_generator_multiple(generator=train_datagenerator, med_path=self.config.Med_train,cover_path=self.config.Cover_train)\n",
+    "        self.validation_generator = self.generate_generator_multiple(generator=valid_datagenerator, med_path=self.config.Med_val,cover_path=self.config.Cover_val)\n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
     "    \n",
     "    def train(self):\n",
-    "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
-    "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
+    "        self.steps_per_epoch = self.TRAIN_NUM// self.config.params_batch_size\n",
+    "        self.validation_steps = self.VAL_NUM // self.config.params_batch_size\n",
     "\n",
     "        self.model.fit(\n",
     "            self.train_generator,\n",
+    "            validation_data=self.validation_generator,\n",
     "            epochs=self.config.params_epochs,\n",
     "            steps_per_epoch=self.steps_per_epoch,\n",
     "            validation_steps=self.validation_steps,\n",
-    "            validation_data=self.valid_generator\n",
     "        )\n",
     "\n",
     "        self.save_model(\n",
@@ -236,20 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-03 15:10:07,145: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-02-03 15:10:07,162: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-02-03 15:10:07,165: INFO: common: created directory at: artifacts]\n",
-      "[2024-02-03 15:10:07,167: INFO: common: created directory at: artifacts\\training]\n",
-      "Found 93 images belonging to 2 classes.\n",
-      "Found 372 images belonging to 2 classes.\n",
-      "23/23 [==============================] - 59s 3s/step - loss: 8.0450 - accuracy: 0.6433 - val_loss: 3.3663 - val_accuracy: 0.4375\n"
+      "[2024-02-11 14:53:11,705: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-02-11 14:53:11,709: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-02-11 14:53:11,711: INFO: common: created directory at: artifacts]\n",
+      "[2024-02-11 14:53:11,713: INFO: common: created directory at: artifacts\\data_ingestion\\Data-CS-DVC\\training_data]\n",
+      "Found 100 images belonging to 1 classes.\n",
+      "Found 100 images belonging to 1 classes.\n",
+      "6/6 [==============================] - ETA: 0s - loss: 2.4359 - hide_conv_f_loss: 1.6092 - revl_conv_f_loss: 1.1023  Found 50 images belonging to 1 classes.\n",
+      "Found 50 images belonging to 1 classes.\n",
+      "6/6 [==============================] - 825s 137s/step - loss: 2.4359 - hide_conv_f_loss: 1.6092 - revl_conv_f_loss: 1.1023 - val_loss: 2.3664 - val_hide_conv_f_loss: 1.5116 - val_revl_conv_f_loss: 1.1397\n"
      ]
     }
    ],
