fixing bugs in training_model component and adding the evaluation pipeline

--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC'"
+       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC\\\\research'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
     "import urllib.request as request\n",
     "from zipfile import ZipFile\n",
     "import tensorflow as tf\n",
-    "from src.cnnClassifier.utils.common import custom_loss_1,custom_loss_2\n",
+    "from src.cnnClassifier.utils.common import custom_loss_1,custom_loss_2,gray_to_rgb,normalize_batch,denormalize_batch\n",
     "import cv2\n",
     "import time\n",
     "import glob"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,42 +152,21 @@
     "            self.config.base_model_path,custom_objects={'custom_loss_2': custom_loss_2,'custom_loss_1': custom_loss_1}\n",
     "        )\n",
     "    \n",
-    "    # Function to convert grayscale image to RGB\n",
-    "    @staticmethod\n",
-    "    def gray_to_rgb(image):\n",
-    "        return cv2.cvtColor(image, cv2.COLOR_GRAY2RGB)\n",
-    "    # Preprocessing functions\n",
-    "    @staticmethod\n",
-    "    def normalize_batch(imgs):\n",
-    "        '''Performs channel-wise z-score normalization'''\n",
-    "\n",
-    "        return (imgs -  np.array([0.485, 0.456, 0.406])) /np.array([0.229, 0.224, 0.225])\n",
-    "    @staticmethod\n",
-    "    def denormalize_batch(imgs,should_clip=True):\n",
-    "        '''Denormalize the images for prediction'''\n",
-    "\n",
-    "        imgs= (imgs * np.array([0.229, 0.224, 0.225])) + np.array([0.485, 0.456, 0.406])\n",
-    "\n",
-    "        if should_clip:\n",
-    "            imgs= np.clip(imgs,0,1)\n",
-    "        return imgs\n",
-    "\n",
-    "    # Custom generator for loading training images from directory\n",
     "    def generate_generator_multiple(self,generator, med_path, cover_path):\n",
-    "        genX1 = generator.flow_from_directory(med_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
-    "        genX2 = generator.flow_from_directory(cover_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
+    "            genX1 = generator.flow_from_directory(med_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
+    "            genX2 = generator.flow_from_directory(cover_path, target_size=(224, 224), batch_size=self.config.params_batch_size, shuffle=True, class_mode=None)\n",
     "\n",
-    "        while True:\n",
-    "            X1i = self.normalize_batch(genX1.next())\n",
-    "            X2i = self.normalize_batch(genX2.next())\n",
+    "            while True:\n",
+    "                X1i = normalize_batch(genX1.next())\n",
+    "                X2i = normalize_batch(genX2.next())\n",
     "\n",
-    "            # Check if the images are grayscale, and convert to RGB if necessary\n",
-    "            if X1i.shape[-1] != 3:\n",
-    "                X1i = self.gray_to_rgb(X1i)\n",
-    "            if X2i.shape[-1] != 3:\n",
-    "                X2i = self.gray_to_rgb(X2i)\n",
+    "                # Check if the images are grayscale, and convert to RGB if necessary\n",
+    "                if X1i.shape[-1] != 3:\n",
+    "                    X1i = gray_to_rgb(X1i)\n",
+    "                if X2i.shape[-1] != 3:\n",
+    "                    X2i = gray_to_rgb(X2i)\n",
     "\n",
-    "            yield ({'secret': X1i, 'cover': X2i}, {'hide_conv_f': X2i, 'revl_conv_f': X1i})\n",
+    "                yield ({'secret': X1i, 'cover': X2i}, {'hide_conv_f': X2i, 'revl_conv_f': X1i})\n",
     "\n",
     "    def train_valid_generator(self):\n",
     "\n",
@@ -199,7 +178,6 @@
     "            **datagenerator_kwargs\n",
     "        )\n",
     "\n",
-    "        self.generate_generator_multiple(generator=valid_datagenerator, med_path=self.config.Med_val,cover_path=self.config.Cover_val)\n",
     "        #needs to be two just like stego requirement\n",
     "        if self.config.params_is_augmentation:\n",
     "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
@@ -241,22 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-11 14:53:11,705: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-02-11 14:53:11,709: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-02-11 14:53:11,711: INFO: common: created directory at: artifacts]\n",
-      "[2024-02-11 14:53:11,713: INFO: common: created directory at: artifacts\\data_ingestion\\Data-CS-DVC\\training_data]\n",
+      "[2024-02-12 19:17:13,642: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-02-12 19:17:13,647: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-02-12 19:17:13,649: INFO: common: created directory at: artifacts]\n",
+      "[2024-02-12 19:17:13,651: INFO: common: created directory at: artifacts\\data_ingestion\\Data-CS-DVC\\training_data]\n",
       "Found 100 images belonging to 1 classes.\n",
       "Found 100 images belonging to 1 classes.\n",
-      "6/6 [==============================] - ETA: 0s - loss: 2.4359 - hide_conv_f_loss: 1.6092 - revl_conv_f_loss: 1.1023  Found 50 images belonging to 1 classes.\n",
+      "6/6 [==============================] - ETA: 0s - loss: 2.4356 - hide_conv_f_loss: 1.5977 - revl_conv_f_loss: 1.1172  Found 50 images belonging to 1 classes.\n",
       "Found 50 images belonging to 1 classes.\n",
-      "6/6 [==============================] - 825s 137s/step - loss: 2.4359 - hide_conv_f_loss: 1.6092 - revl_conv_f_loss: 1.1023 - val_loss: 2.3664 - val_hide_conv_f_loss: 1.5116 - val_revl_conv_f_loss: 1.1397\n"
+      "6/6 [==============================] - 887s 148s/step - loss: 2.4356 - hide_conv_f_loss: 1.5977 - revl_conv_f_loss: 1.1172 - val_loss: 2.3489 - val_hide_conv_f_loss: 1.4937 - val_revl_conv_f_loss: 1.1404\n"
      ]
     }
    ],
