fixed the hiding page interface,added the reveal_prediction.py , updated the app.py with the reveal functions and  added the reveal page interface

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,33 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#config box\n",
+    "from flask import Flask, flash, request, redirect, url_for,render_template\n",
+    "from flask import send_file\n",
     "\n",
-    "d={\"key\": \"val\" , \"key1\":\"val1\"}"
+    "import os\n",
+    "from flask_cors import CORS, cross_origin\n",
+    "from cnnClassifier.utils.common import decodeImage\n",
+    "from cnnClassifier.pipeline.hide_prediction import HidePredictionPipeline\n",
+    "from cnnClassifier.pipeline.reveal_prediction import RevealPredictionPipeline\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "UPLOAD_FOLDER = 'static'\n",
+    "ALLOWED_EXTENSIONS = {'txt', 'pdf', 'png', 'jpg', 'jpeg', 'gif'}\n",
+    "os.putenv('LANG', 'en_US.UTF-8')\n",
+    "os.putenv('LC_ALL', 'en_US.UTF-8')\n",
+    "def allowed_file(filename):\n",
+    "    return '.' in filename and \\\n",
+    "           filename.rsplit('.', 1)[1].lower() in ALLOWED_EXTENSIONS\n",
+    "app = Flask(__name__)\n",
+    "CORS(app)\n",
+    "\n",
+    "class ClientApp:\n",
+    "    def __init__(self):\n",
+    "        self.secret = \"static\\images\\secret.jpg\"\n",
+    "        self.cover = \"static\\images\\cover.jpg\"\n",
+    "        self.coverout = \"static\\images\\Coverout.jpg\"\n",
+    "        self.toreveal = r\"static\\images\\toreveal.jpg\"\n",
+    "        self.secretout = r\"static\\images\\secretout.jpg\"\n",
+    "        self.hideclassifier = HidePredictionPipeline(self.secret, self.cover)\n",
+    "        self.revealclassifier = RevealPredictionPipeline()\n",
+    "\n",
+    "clApp = ClientApp()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'val'"
+       "'c:\\\\Users\\\\08you\\\\Desktop\\\\My own 3 hour project\\\\Securing-Medical-Data-Transfer-Using-Deep-Steganography-and-Cryptography-MLflow-DVC'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d['key']"
+    "%pwd"
    ]
   },
   {
@@ -37,36 +65,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from box import ConfigBox"
+    "import os \n",
+    "os.chdir(\"../\")\n",
+    "os.chdir(\"../\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2 = ConfigBox({\"key\": \"val\" , \"key1\":\"val1\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'val1'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'JpegImageFile' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mclApp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrevealclassifier\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclApp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoreveal\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\users\\08you\\desktop\\my own 3 hour project\\securing-medical-data-transfer-using-deep-steganography-and-cryptography-mlflow-dvc\\src\\cnnClassifier\\pipeline\\reveal_prediction.py:19\u001b[0m, in \u001b[0;36mRevealPredictionPipeline.predict\u001b[1;34m(self, filename)\u001b[0m\n\u001b[0;32m     14\u001b[0m reveal\u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mmodels\u001b[38;5;241m.\u001b[39mload_model(\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124martifacts/split_model/reveal.h5\u001b[39m\u001b[38;5;124m\"\u001b[39m,custom_objects\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcustom_loss_2\u001b[39m\u001b[38;5;124m'\u001b[39m: custom_loss_2,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcustom_loss_1\u001b[39m\u001b[38;5;124m'\u001b[39m: custom_loss_1}\n\u001b[0;32m     16\u001b[0m     , \u001b[38;5;28mcompile\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     17\u001b[0m )\n\u001b[0;32m     18\u001b[0m coverout \u001b[38;5;241m=\u001b[39m image\u001b[38;5;241m.\u001b[39mload_img(filename, target_size \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m224\u001b[39m,\u001b[38;5;241m224\u001b[39m))\n\u001b[1;32m---> 19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcoverout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[0;32m     20\u001b[0m     coverout \u001b[38;5;241m=\u001b[39m gray_to_rgb(coverout)\n\u001b[0;32m     21\u001b[0m secretout\u001b[38;5;241m=\u001b[39mreveal\u001b[38;5;241m.\u001b[39mpredict(coverout)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'JpegImageFile' object has no attribute 'shape'"
+     ]
     }
    ],
    "source": [
-    "d2.key1"
+    "clApp.revealclassifier.predict(clApp.toreveal)"
    ]
   },
   {
@@ -75,50 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ensure annotations\n",
+    "from tensorflow.keras.preprocessing import image\n",
     "\n",
-    "def get_product(x:int, y:int) -> int:\n",
-    "    return x*y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'33'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_product(x=2,y=\"3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ensure import ensure_annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@ensure_annotations\n",
-    "def get_product(x:int,y:int) ->int:\n",
-    "    return x*y\n"
+    "img =image.load_img(clApp.toreveal, target_size = (224,224))"
    ]
   },
   {
@@ -127,61 +109,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "EnsureError",
-     "evalue": "Argument y of type <class 'str'> to <function get_product at 0x000001691B163EE0> does not match annotation type <class 'int'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mEnsureError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_product\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\08you\\anaconda3\\envs\\kidney\\lib\\site-packages\\ensure\\main.py:845\u001b[0m, in \u001b[0;36mWrappedFunctionReturn.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    840\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, templ):\n\u001b[0;32m    841\u001b[0m         msg \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    842\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArgument \u001b[39m\u001b[38;5;132;01m{arg}\u001b[39;00m\u001b[38;5;124m of type \u001b[39m\u001b[38;5;132;01m{valt}\u001b[39;00m\u001b[38;5;124m to \u001b[39m\u001b[38;5;132;01m{f}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    843\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match annotation type \u001b[39m\u001b[38;5;132;01m{t}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    844\u001b[0m         )\n\u001b[1;32m--> 845\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m EnsureError(msg\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m    846\u001b[0m             arg\u001b[38;5;241m=\u001b[39marg, f\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf, t\u001b[38;5;241m=\u001b[39mtempl, valt\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mtype\u001b[39m(value)\n\u001b[0;32m    847\u001b[0m         ))\n\u001b[0;32m    849\u001b[0m return_val \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    850\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(return_val, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_templ):\n",
-      "\u001b[1;31mEnsureError\u001b[0m: Argument y of type <class 'str'> to <function get_product at 0x000001691B163EE0> does not match annotation type <class 'int'>"
-     ]
-    }
-   ],
-   "source": [
-    "get_product(2,\"3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "From (original): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
-      "From (redirected): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=10950879-80dc-444f-bc3d-7aa474ed1398\n",
-      "To: c:\\Users\\08you\\Desktop\\4 Hours Project\\Kidney-Disease-Classification-MLflow-DVC\\research\\kidney-CT-Scan-data.zip\n",
-      "100%|██████████| 57.7M/57.7M [02:50<00:00, 338kB/s] \n"
+      "1/1 [==============================] - 1s 1s/step\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'kidney-CT-Scan-data.zip'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3'\n",
-    "gdown.download(url, \"kidney-CT-Scan-data.zip\")"
+    "import numpy as np \n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "from cnnClassifier.utils.common import custom_loss_1,custom_loss_2,gray_to_rgb,normalize_batch,denormalize_batch\n",
+    "import os\n",
+    "import tensorflow  as tf\n",
+    "reveal= tf.keras.models.load_model(\n",
+    "    \"artifacts/split_model/reveal.h5\",custom_objects={'custom_loss_2': custom_loss_2,'custom_loss_1': custom_loss_1}\n",
+    "    , compile=False\n",
+    ")\n",
+    "if len(img.split()) != 3:\n",
+    "    img = gray_to_rgb(img)\n",
+    "secretout=reveal.predict(np.reshape(img,(1,224,224,3)))"
    ]
   },
   {
